# desorption

./: README.md  figure_scripts.py  figures_prediction.ipynb  figures_transfer.ipynb  models.py  optimal_temperature.py  requirements.txt  training.py  transfer_learning.py  utils.py
MCCCS-MN/: AUTHORS  README.md  compile-bgq-2016.sh
MCCCS-MN/cmake/: Toolchain-BlueGeneQ-XL.cmake
MCCCS-MN/cmake/Platform/: BlueGeneQ-base.cmake  BlueGeneQ-static.cmake
MCCCS-MN/input_files/: README.md
MCCCS-MN/input_files/C4-W-MFI_96mol-7_473K_128_1/: fort.4  fort.77  topmon.inp  zeolite.cif
MCCCS-MN/input_files/C5-W-LTA_96mol-8_373K_512_1/: fort.4  fort.77  zeolite.cif
MCCCS-MN/src/: CMakeLists.txt  Makefile.am  anes.F90  calcsolpar.F90  charge.F90  const_math.F90  const_phys.F90  defines.h.in  deriv.F90  dipole.F90  dump.F90  energy_3body.F90  energy_4body.F90  energy_external.F90  energy_garofalini.F90  energy_intramolecular.F90  energy_kspace.F90  energy_pairwise.F90  energy_sami.F90  flucq.F90  fparser.F90  includedep.sh  inclus.F90  insert_1.F90  ipswsetup.F90  jfmpi.cpp  makedeps.sh  moduledep.sh  molsetup.F90  moves_cbmc.F90  moves_ee.F90  moves_simple.F90  moves_volume.F90  mp_bcast.F90  mp_bcast_aux.F90  mp_gather_0.F90  mp_gather_1.F90  mp_gatherv_1.F90  mp_gatherv_2.F90  mp_gatherv_3.F90  (+40 more)
MCCCS-MN/src/obsolete/: analysis.f  chempt.f  coruz.f  forcefield.f  mbessel.f  nrtab.f  pgrid.f  qqcheck.f  readRES.f  test1.f  testupdate.f  thermopress.f  trim_swap.f
models/: dense-transfer.h5  pvnet-MFI-C5-W.h5  sorbnet-MFI-C5-W.h5  sorbnet-transfer.h5
